<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:viewBindingIgnore="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/privacy_policy_heading"
        android:id="@+id/privacy_policy_heading"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy_heading"
        app:layout_constraintBottom_toTopOf="@id/pp_scrollview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/divider2"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:id="@+id/pp_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pp_checkbox"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/pp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:padding="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white" />

    </ScrollView>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/pp_scrollview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/divider"
        android:background="@android:color/darker_gray" />

    <CheckBox
        android:id="@+id/pp_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:text="@string/pp_checkbox"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:paddingStart="16dp"/>

    <Button
        android:id="@+id/pp_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/pp_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/pp_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continyu"
        app:layout_constraintTop_toBottomOf="@id/pp_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
